# ForgePulse

./: .dockerignore  .env.example  .gitattributes  .gitignore  DELIVERY_CHECKLIST.md  Dockerfile  PLANNING.md  README.md  index.html
api/: health.json
app/: README.md
app/backend/: README.md  pyproject.toml
app/backend/forgepulse_api/: __init__.py  main.py  schemas.py  security.py
app/backend/forgepulse_api/services/: __init__.py  alarm_parser.py  case_loader.py  diagnosis.py  model_provider.py  report_writer.py  retriever.py  sensor_analyzer.py
app/backend/tests/: test_agent_reasoning.py  test_diagnosis_shape.py  test_model_provider.py  test_validation_and_agent.py
assets/: index-BUDLJbtV.css  index-DFclvaNi.js
data/: README.md  fault_modes.json
deliverables/: ForgePulse-Agent-Hackathon.pptx
docs/: AGENT_WORKFLOW.md  AI_BUILD_LOG.md  AI_BUILD_PROTOCOL.md  AI_EXECUTION_PROMPT_FIRST_PLACE.md  ASCEND_INTEGRATION.md  BUSINESS_VALUE.md  DATA_CONTRACTS.md  DECISION_REVIEW.md  DEMO_STORYBOARD.md  DEMO_VIDEO_SCRIPT.md  EVALUATION_PLAN.md  FIRST_PLACE_MARKET_READY_PLAN.md  HUGGINGFACE_DEPLOY.md  IMPLEMENTATION_GUIDE.md  MARKET_READY_ROADMAP.md  NEXT_STRATEGIC_WORK_PLAN.md  PILOT_DEPLOYMENT_PLAN.md  PITCH_SCRIPT.md  POST_EXECUTION_REVIEW.md  PUBLIC_RELEASE_CHECKLIST.md  SECURITY_AND_SAFETY_BOUNDARIES.md  SYSTEM_ARCHITECTURE.md
evaluation/: evaluate_cases.py  evaluation_results.json  golden_cases.json  rubric.md
reports/: sample_diagnosis_report.md
schemas/: case_manifest.schema.json  diagnosis.schema.json
scripts/: case_cli.py  export_static_api.py  (+5 more)
(+92 files in other folders)
